--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+autobahn (19.2.1+ind2) testing; urgency=medium
+
+  * remove python2 packages
+
+ -- Nicusor Huhulea <nicusor_huhulea@mentor.com>  Thu, 02 Dec 2021 06:58:34 -0500
+
 autobahn (19.2.1+ind1) testing; urgency=medium
 
   * Initial release
